# ci-result-notification

./: .gitignore  Cargo.toml  app.cf  build.sh  deploy.sh  upload-secrets.sh
.github/actions/lambda-function-builder/: Dockerfile
.github/workflows/: deployment.yml
src/: character.rs  formatter.rs  main.rs
src/character/: .gitkeep
