[package]
name = "ci-result-notification"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.4"
rand = "0.8"
tokio = "1.12"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
